<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  android:orientation="vertical"
    tools:context="cn.edu.gdmec.c07150807.thread.MainActivity">
<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/anr"
    android:onClick="anr"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/threadclass"
        android:onClick="threadclass"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/runnableinterface"
        android:onClick="runnableinterface"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timertask"
        android:onClick="timertask"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/handlermessage"
        android:onClick="handlermessage"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/asynctask"
        android:onClick="asynctask"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:id="@+id/tv1" />
</LinearLayout>
